Fixing icons, colors, and contact spacing. Working on making the mobile view look better.

--- a/css/main.css
+++ b/css/main.css
@@ -165,12 +165,12 @@ body {
     }
   }
   @media screen and (max-width: 768px) {
-    .col-sm-4 {
+    .col-sm-4 .col-sm-3{
       text-align: center;
       margin: 25px 0;
     }
     .btn-lg {
-        width: 100%;
+        width: 50%;
         margin-bottom: 35px;
     }
   }
